/**
 * @ (#) Course.java   1.0     27/1/2026
 * <p>
 * Copyright (c) 2026 IUH. All rights reserved
 */
package com.ngviet291.entity;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import lombok.ToString;

/**
 * @description
 * @author: Nguyen Tran Quoc Viet 
 * @version: 1.0
 * @created: 27/1/2026
 */
@NoArgsConstructor
@AllArgsConstructor
@Data

public class Course {
    private  String id;
    private String name;
    private int credits;

}
